<resources>
    <string name="app_name">Most Popular Movies</string>
    <string name="action_refresh">Refresh</string>
    <string name="movie_poster">Movie Poster Image</string>
    <string name="action_most_popular">Most Popular Movies</string>
    <string name="action_highest_rated">Highest Rated</string>
    <string name="action_upcoming_movies">Upcoming Movies</string>
    <string name="action_latest_movies">Latest Movies</string>
    <string name="action_now_playing_movies">Now Playing</string>
    <string name="action_more_settings">Other Settings</string>

    <string name="tools_movie_title">Very Cool And Very Long Movie Title 2018</string>
    <string name="no_movie_data">Error, no movie info.</string>
    <string name="indicating">Indicating</string>
    <string name="no_internet">No internet connection.</string>
    <string name="action_saved_movies">My favourite movies</string>
    <string name="menu_icon">Menu icon</string>
    <string name="radio_selected_key">pref_radio_selected_key</string>
    <string name="lorem">O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres de um texto para criar um espécime de livro. Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica, mantendo-se essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de Letraset, que continham passagens com Lorem Ipsum, e mais recentemente com os programas de publicação como o Aldus PageMaker que incluem versões do Lorem Ipsum." </string>
    <string name="action_share">Share Movie</string>
    <string name="movie_section_pref_key">movie_pref_key</string>
    <string name="votes">votes</string>
    <string name="options_icon">Options Icon</string>
    <string name="reviews">Reviews</string>
    <string name="trailers">Trailers</string>
    <string name="no_review_data">No review available</string>
    <string name="author">Author: </string>
    <string name="url">Url: </string>
    <string name="send_to">Send Movie data to:</string>
    <string name="movie_in_favorites">Movie already saved in favorites.\nLong Press to remove from favorites.</string>
    <string name="youtube_thumbnail">Youtube video thumbnail</string>
    <string name="hey_check_this">Hey Check out this cool movie</string>
    <string name="android_app"> Android App</string>
    <string name="sent_from">Sent from: </string>
    <string name="saved_movie">Movie data saved to Favorites</string>
    <string name="pref_title_label">Select Language</string>
    <string name="pref_default_lang">pt-PT</string>
    <string name="pref_language_key">language_preferences</string>
    <string name="settings_activity_title">Settings</string>

    <!-- themoviedb image sizes "w92", "w154", "w185", "w342", "w500", "w780", or "original".-->
    <string-array name="image_sizes">
        <item>w92</item>
        <item>w154</item>
        <item>w185</item>
        <item>w342</item>
        <item>w500</item>
        <item>w780</item>
        <item>original</item>
    </string-array>

    <integer-array name="image_width_px">
        <item>92</item>
        <item>154</item>
        <item>185</item>
        <item>342</item>
        <item>500</item>
        <item>780</item>
        <item>781</item>
    </integer-array>

    <string name="default_language">en-US</string>
    <string name="appbar_scrolling_view_behaviour">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="my_favorite_movies">My Favorite Movies</string>
    <string name="most_popular_movies">Most Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="upcoming_movies">Upcoming movies</string>
    <string name="latest_movies">Latest Movies</string>
    <string name="movies_now_playing">Movies Now Playing</string>
    <string name="save_to_favorites">Save to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="successfully">successfully.</string>
    <string name="error_check_log">with errors... Check log.</string>
    <string name="ic_most_popular">Menu item icon, most popular</string>
    <string name="ic_highest_rated">Menu item icon, highest rated</string>
    <string name="ic_upcoming">Menu item icon, upcoming</string>
    <string name="ic_now_playing">Menu item icon, now playing</string>
    <string name="ic_favorites">Menu item icon, favorites</string>
    <string name="ic_settings">Menu item icon, settings</string>

    <!-- Label ordering must match values -->
    <string-array name="pref_language_labels">
        <item>Português</item>
        <item>English</item>
        <item>Español</item>
        <item>Français</item>
        <item>Deutsche</item>
    </string-array>

    <string-array name="pref_language_values">
        <item>pt-PT</item>
        <item>en-US</item>
        <item>es-ES</item>
        <item>fr-FR</item>
        <item>de-DE</item>
    </string-array>

    <string name="title_activity_about">About</string>
    <string name="about_button">That\'s Cool</string>
    <string name="about_content">Most Popular Movies app made by Sergio C. for the Android Developer Nanodegree By Google Udacity course. \nCourse Project 2</string>
    <string name="action_about">About</string>
    <string name="ic_info">About icon</string>
    <string name="app_image">App image</string>

    <!--<string-array name="pref_language_labels">-->
    <!--<item>Austria</item>-->
    <!--<item>Australia</item>-->
    <!--<item>Azerbaijan</item>-->
    <!--<item>Bosnia and Herzegovina</item>-->
    <!--<item>Belgium</item>-->
    <!--<item>Bulgaria</item>-->
    <!--<item>Canada (English)</item>-->
    <!--<item>Canada (French)</item>-->
    <!--<item>China</item>-->
    <!--<item>Croatia</item>-->
    <!--<item>Cyprus</item>-->
    <!--<item>Czech Republic</item>-->
    <!--<item>Denmark</item>-->
    <!--<item>Germany</item>-->
    <!--<item>Estonia</item>-->
    <!--<item>Finland</item>-->
    <!--<item>France</item>-->
    <!--<item>Greece</item>-->
    <!--<item>Hong Kong</item>-->
    <!--<item>Hungary</item>-->
    <!--<item>Ireland</item>-->
    <!--<item>India</item>-->
    <!--<item>Italy</item>-->
    <!--<item>Japan</item>-->
    <!--<item>Korea</item>-->
    <!--<item>Latvia</item>-->
    <!--<item>Lithuania</item>-->
    <!--<item>Netherlands</item>-->
    <!--<item>New Zealand</item>-->
    <!--<item>Norway</item>-->
    <!--<item>Poland</item>-->
    <!--<item>Portugal</item>-->
    <!--<item>Romania</item>-->
    <!--<item>Russia</item>-->
    <!--<item>Serbia</item>-->
    <!--<item>Singapore</item>-->
    <!--<item>Slovakia</item>-->
    <!--<item>Slovenia</item>-->
    <!--<item>South Africa</item>-->
    <!--<item>Spain</item>-->
    <!--<item>Sweden</item>-->
    <!--<item>Switzerland</item>-->
    <!--<item>Ukraine</item>-->
    <!--<item>United Arab Emirates</item>-->
    <!--<item>United Kingdom</item>-->
    <!--<item>United States</item>-->
    <!--<item>Viet Nam</item>-->
    <!--</string-array>-->

    <!--"ar-AE",-->
    <!--"ar-SA",-->
    <!--"bg-BG",-->
    <!--"bn-BD",-->
    <!--"ca-ES",-->
    <!--"ch-GU",-->
    <!--"cs-CZ",-->
    <!--"da-DK",-->
    <!--"de-DE",-->
    <!--"el-GR",-->
    <!--"en-US",-->
    <!--"eo-EO",-->
    <!--"es-ES",-->
    <!--"es-MX",-->
    <!--"eu-ES",-->
    <!--"fa-IR",-->
    <!--"fi-FI",-->
    <!--"fr-CA",-->
    <!--"fr-FR",-->
    <!--"he-IL",-->
    <!--"hi-IN",-->
    <!--"hu-HU",-->
    <!--"id-ID",-->
    <!--"it-IT",-->
    <!--"ja-JP",-->
    <!--"ka-GE",-->
    <!--"kn-IN",-->
    <!--"ko-KR",-->
    <!--"lt-LT",-->
    <!--"ml-IN",-->
    <!--"nb-NO",-->
    <!--"nl-NL",-->
    <!--"no-NO",-->
    <!--"pl-PL",-->
    <!--"pt-BR",-->
    <!--"pt-PT",-->
    <!--"ro-RO",-->
    <!--"ru-RU",-->
    <!--"sk-SK",-->
    <!--"sl-SI",-->
    <!--"sr-RS",-->
    <!--"sv-SE",-->
    <!--"ta-IN",-->
    <!--"te-IN",-->
    <!--"th-TH",-->
    <!--"tr-TR",-->
    <!--"uk-UA",-->
    <!--"vi-VN",-->
    <!--"zh-CN",-->
    <!--"zh-TW"-->

</resources>
