<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_refresh"
        android:orderInCategory="1"
        android:title="@string/action_refresh"
        android:icon="@android:drawable/stat_notify_sync"
        android:contentDescription="@string/action_refresh"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_most_popular"
        android:orderInCategory="2"
        android:icon="@drawable/menu_indicator"
        android:title="@string/action_most_popular"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_highest_rated"
        android:orderInCategory="3"
        android:icon="@drawable/menu_indicator"
        android:title="@string/action_highest_rated"
        app:showAsAction="never"/>

</menu>