<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/shadow"
        app:cardBackgroundColor="@color/colorMenu"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/radio_popular"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/radio_popular"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/radio_top_rated"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>

                <RadioButton
                    android:id="@+id/radio_upcuming"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>

                <RadioButton
                    android:id="@+id/radio_now_playing"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>

                <RadioButton
                    android:id="@+id/radio_favourite"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/options_icon"
                    android:padding="8dp"
                    app:srcCompat="@drawable/ic_three_dots"/>

            </RadioGroup>

            <TextView
                android:id="@+id/menu_textView_popular"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/action_most_popular"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/radioGroup"/>

            <TextView
                android:id="@+id/menu_textView_top_rated"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/action_highest_rated"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/menu_textView_popular"
                app:layout_constraintTop_toBottomOf="@+id/menu_textView_popular"/>

            <TextView
                android:id="@+id/menu_textView_upcoming"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/action_upcoming_movies"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/menu_textView_top_rated"
                app:layout_constraintTop_toBottomOf="@+id/menu_textView_top_rated"/>

            <TextView
                android:id="@+id/menu_textView_now_playing"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/action_now_playing_movies"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/menu_textView_upcoming"
                app:layout_constraintTop_toBottomOf="@+id/menu_textView_upcoming"/>

            <TextView
                android:id="@+id/menu_textView_favourite"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/action_saved_movies"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/menu_textView_now_playing"
                app:layout_constraintTop_toBottomOf="@+id/menu_textView_now_playing"/>

            <TextView
                android:id="@+id/menu_other_settings"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/action_more_settings"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/menu_textView_favourite"
                app:layout_constraintTop_toBottomOf="@+id/menu_textView_favourite"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/ic_most_popular"
                app:layout_constraintBottom_toBottomOf="@+id/menu_textView_popular"
                app:layout_constraintStart_toEndOf="@+id/radioGroup"
                app:layout_constraintTop_toTopOf="@+id/menu_textView_popular"
                app:srcCompat="@drawable/ic_popular"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/ic_highest_rated"
                app:layout_constraintBottom_toBottomOf="@+id/menu_textView_top_rated"
                app:layout_constraintEnd_toStartOf="@+id/menu_textView_top_rated"
                app:layout_constraintTop_toTopOf="@+id/menu_textView_top_rated"
                app:srcCompat="@drawable/ic_top_rated"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/ic_upcoming"
                app:layout_constraintBottom_toBottomOf="@+id/menu_textView_upcoming"
                app:layout_constraintEnd_toStartOf="@+id/menu_textView_upcoming"
                app:layout_constraintTop_toTopOf="@+id/menu_textView_upcoming"
                app:srcCompat="@drawable/ic_new_badge"/>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/ic_now_playing"
                app:layout_constraintBottom_toBottomOf="@+id/menu_textView_now_playing"
                app:layout_constraintEnd_toStartOf="@+id/menu_textView_now_playing"
                app:layout_constraintTop_toTopOf="@+id/menu_textView_now_playing"
                app:srcCompat="@drawable/ic_movie_player"/>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/ic_favorites"
                app:layout_constraintBottom_toBottomOf="@+id/menu_textView_favourite"
                app:layout_constraintEnd_toStartOf="@+id/menu_textView_favourite"
                app:layout_constraintTop_toTopOf="@+id/menu_textView_favourite"
                app:srcCompat="@drawable/ic_favourite2"/>

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/ic_settings"
                app:layout_constraintBottom_toBottomOf="@+id/menu_other_settings"
                app:layout_constraintEnd_toStartOf="@+id/menu_other_settings"
                app:layout_constraintTop_toTopOf="@+id/menu_other_settings"
                app:srcCompat="@drawable/ic_settings"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</layout>