<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@drawable/shadow"
    app:cardBackgroundColor="@color/colorMenu"
    app:cardCornerRadius="4dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="12dp"
        android:paddingTop="8dp">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/radio_popular"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_popular"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radio_top_rated"
                android:layout_width="32dp"
                android:layout_height="32dp"/>

            <RadioButton
                android:id="@+id/radio_favourite"
                android:layout_width="32dp"
                android:layout_height="32dp"/>

        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/menu_textView_popular"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:drawableLeft="@drawable/ic_popular"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:text="@string/action_most_popular"
                android:textColor="@android:color/white"
                android:textSize="16dp"/>


            <TextView
                android:id="@+id/menu_textView_top_rated"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:drawableLeft="@drawable/ic_top_rated"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:text="@string/action_highest_rated"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/menu_textView_favourite"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:drawableLeft="@drawable/ic_favourite2"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:text="@string/action_saved_movies"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>
